# NFT-Ascent

./: README-Frontend.md  README.md  frontend-integration-guide.md  neon-marketplace-abi.json  neon-nft-abi.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: AuctionCard.tsx  CreateAuction.tsx  InitializeNFT.tsx  Marketplace.tsx  MintNFT.tsx  WalletConnect.tsx
frontend/src/config/: contracts.ts  ipfs.ts
frontend/src/hooks/: useIpfsUpload.ts  useMarketplace.ts  useNFT.ts  useWeb3.ts
frontend/src/lib/: utils.ts
neon-marketplace/: Cargo.toml  README.md  marketplace_abi.sol
neon-marketplace/src/: lib.rs  main.rs
neon-marketplace/tests/: marketplace_tests.rs
neon-nft/: README.md  nft_abi.sol
neon-nft/src/: lib.rs  main.rs
neon-nft/tests/: nft_tests.rs
