[package]
name = "neon-marketplace"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alfredadenigba/neon-marketplace"
repository = "https://github.com/alfredadenigba/neon-marketplace"
keywords = ["arbitrum", "ethereum", "stylus", "nft", "marketplace"]
description = "A lightweight NFT marketplace built with Rust and Arbitrum Stylus for ultra-fast, low-cost NFT trading"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }
dotenv = "0.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# Size optimization for Stylus deployment
opt-level = "s"

[[bin]]
name = "neon-marketplace"
path = "src/main.rs"
